--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Joe's Garage</title>
 </head>
 <body>
     <header>
@@ -22,7 +22,7 @@
     <section>find us</section>
     <section>burgers</section>
     <footer>
-        
+        footer stuff
     </footer>
 </body>
 </html>
