--- a/index.html
+++ b/index.html
@@ -4,17 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Joe's Garage is an all vehicle workshop located in Los Angeles, California">
+    <meta name="keywords" content="car repair, workshop, change windshield, flat tire, paintjob, oil change, Los Angeles, California">
+
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Joe's Garage</title>
 </head>
 <body>
     <header>
-        <h1>
-            Joe's Garage
-        </h1>
+        <a href="index.html">
+            <h1>Joe's Garage</h1>
+        </a>
         <nav>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Joe's History</a></li>
-            <li><a href="#">Contact</a></li>
+            <ul id="menu">
+                <li>
+                    <a href="index.html">Contact</a>
+                </li>
+                <li>
+                    <a href="#">Joe's History</a>
+                </li>
+                <li>
+                    <a href="#">Home</a>
+                </li>
+            </ul>
         </nav>
     </header>
     <section>logo area</section>
