--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <a href="index.html">
-            <h1>Joe's Garage</h1>
+            <h1 id="logo">Joe's Garage</h1>
         </a>
         <nav>
             <ul id="menu">
@@ -29,12 +29,20 @@
             </ul>
         </nav>
     </header>
-    <section>logo area</section>
+    <section id="hero-outer">
+        <div id="hero-image"></div>
+        <div id="joe-sign"></div>
+    </section>
     <section>services</section>
     <section>find us</section>
     <section>burgers</section>
-    <footer>
-        footer stuff
-    </footer>
+    <footer class="footer">
+        <div class="row footer-container">
+          <div class="column">1</div>
+          <div class="column">2</div>
+          <div class="column">3</div>
+          <div class="column">4</div>
+        </div>
+      </footer>
 </body>
 </html>
