add structure to Services

--- a/index.html
+++ b/index.html
@@ -33,9 +33,56 @@
         <div id="hero-image"></div>
         <div id="joe-sign"></div>
     </section>
-    <section>services</section>
-    <section>find us</section>
-    <section>burgers</section>
+    <section id="services">
+        <div id="left-about">
+            <div class="left-about-heading">
+                <h2>Service & repair<i class="fa-solid fa-heart-pulse"></i></h2>
+                <hr>
+                <p>
+                    It could be planned maintenance or it could be breakdown. We have a 24h service and can do long-haul salvage.
+                </p>
+            </div>
+            <div class="left-about-heading">
+                <h2>Tires<i class="fa-brands fa-fly"></i></h2>
+                <hr>
+                <p>
+                    New rubber, better rims? Whatever you wan't Joe's the place. We have a lot in stock, so often we can do tires on drop-in. 
+                </p>
+            </div>
+        </div>
+        <div id="right-about">
+            <div class="right-about-heading">
+                <h2>Electric cars welcome! <i class="fa-solid fa-globe"></i></h2>
+                <hr>
+                <p>
+                    Also electrical cars need som lovin' from time to time. Let our certified technicians make sure that all your travels go smooth.
+                </p>
+            </div>
+            <div class="right-about-heading">
+                <h2>Change windshield <i class="fa-solid fa-dumbbell"></i></h2>
+                <hr>
+                <p>
+                    Make sure to take care of your windshield, your life may depend on it. If you let us take care of te little scratch me can repair it but if the damage is bigger we have to replace it. Let's save that extra cash.
+                </p>
+            </div>
+        </div>
+        <div id="center-about">
+            <div id="circle-container">
+                <div id="circle-cover-bg">
+                    <h2 id="circle-services">Services</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <h2>Find us</h2>
+    </section>
+    <section>
+        <h2>Burgers & oil change</h2>
+        <div>
+            <p>Join our ever so popular event, grab a burger and do a drop in check of your car. No notfication needed!</p>
+        </div>
+    </section>
     <footer class="footer">
         <div class="row footer-container">
           <div class="column">1</div>
