add tubelight-effect to 24 hour service

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                 </li>
             </ul>
         </nav>
+        <div id="all-day-service" data-text="24 hour service +46700123123">
+            24 hour service +46700123123
+        </div>
     </header>
     <section>
 
