--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
                     <a href="#">Services</a>
                 </li>
                 <li>
-                    <a href="#">About</a>
-                </li>
-                <li>
                     <a href="#">Contact</a>
                 </li>
             </ul>
@@ -38,7 +35,6 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2129.064591855282!2d11.833479016136447!3d57.749327243720494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464f8b9545653703%3A0x8f68447a1f2750be!2sGamla%20S%C3%B6rredsv%C3%A4gen%20190%2C%20423%2056%20Torslanda!5e0!3m2!1ssv!2sse!4v1656955306517!5m2!1ssv!2sse" width="50%" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="map"></iframe>
         </div>
         <div id="details">
-            <h1>Find Us</h1>
             <h2>Opening Hours</h2>
             <table>
                 <tr><th>Sunday</th><td>Closed</td></tr>
@@ -54,5 +50,19 @@
             <button type="button" id="touch"><a href="contact.html">Get in touch!</a> </button>
         </div>
     </section>
+    <section>
+        <div id="tools">
+            <img src="assets/images/kenny-eliason-60krlMMeWxU-unsplash.jpg" alt="Picture with well used tools.">
+        </div>
+        <div id="services">
+            <h2>Services</h2>
+        </div>
+    </section>
+    <section>
+        <h2>Customer satisfaction guaranteed!</h2>
+    </section>
+    <footer>
+        <h2>links, social copy etc</h2>
+    </footer>
 </body>
 </html>
