--- a/index.html
+++ b/index.html
@@ -35,19 +35,21 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2129.064591855282!2d11.833479016136447!3d57.749327243720494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464f8b9545653703%3A0x8f68447a1f2750be!2sGamla%20S%C3%B6rredsv%C3%A4gen%20190%2C%20423%2056%20Torslanda!5e0!3m2!1ssv!2sse!4v1656955306517!5m2!1ssv!2sse" width="50%" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="map"></iframe>
         </div>
         <div id="details">
-            <h2>Opening Hours</h2>
-            <table>
-                <tr><th>Sunday</th><td>Closed</td></tr>
-                <tr><th>Weekdays</th><td>8am - 6pm</td></tr>
-                <tr><th>Saturday</th><td>10am - 3pm</td></tr>
-            </table>
-            <h2>Contact details</h2>
-            <table>
-                <tr><th>Email</th><td>hello@joesgarage.com</td></tr>
-                <tr><th>Adress</th><td>Gamla Sörredsvägen 190, 423 56, Torslanda</td></tr>
-                <tr><th>Phone</th><td>10am - 3pm</td></tr>
-            </table>
-            <button type="button" id="touch"><a href="contact.html">Get in touch!</a> </button>
+            <div>
+                <h2>Opening Hours</h2>
+                <table>
+                    <tr><th>Sunday</th><td>Closed</td></tr>
+                    <tr><th>Weekdays</th><td>8am - 6pm</td></tr>
+                    <tr><th>Saturday</th><td>10am - 3pm</td></tr>
+                </table>
+                <h2>Contact details</h2>
+                <table>
+                    <tr><th>Email</th><td>hello@joesgarage.com</td></tr>
+                    <tr><th>Adress</th><td>Gamla Sörredsvägen 190, 423 56, Torslanda</td></tr>
+                    <tr><th>Phone</th><td>10am - 3pm</td></tr>
+                </table>
+                <button type="button" id="touch"><a href="contact.html">Get in touch!</a> </button>
+            </div>
         </div>
     </section>
     <section>
