--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             </ul>
         </nav>
         <div id="all-day-service" data-text="24 hour service +46700123123">
-            24 hour service +46700123123
+            24 hour service 
+            <br>
+            +46700123123
         </div>
     </header>
     <section id="details-map">
@@ -43,11 +45,11 @@
                     <tr><th>Saturday</th><td>10am - 3pm</td></tr>
                 </table>
                 <h2>Contact details</h2>
-                <table>
-                    <tr><th>Email</th><td>hello@joesgarage.com</td></tr>
-                    <tr><th>Adress</th><td>Gamla Sörredsvägen 190, 423 56, Torslanda</td></tr>
-                    <tr><th>Phone</th><td>10am - 3pm</td></tr>
-                </table>
+                <ul>
+                    <li>hello@joesgarage.com</li>
+                    <li>Gamla Sörredsvägen 190, 423 56, Torslanda</li>
+                    <li>+46700123123</li>
+                </ul>
                 <button type="button" id="touch"><a href="contact.html">Get in touch!</a> </button>
             </div>
         </div>
