add style to contact details section incl button

--- a/index.html
+++ b/index.html
@@ -44,13 +44,15 @@
                     <tr><th>Weekdays</th><td>8am - 6pm</td></tr>
                     <tr><th>Saturday</th><td>10am - 3pm</td></tr>
                 </table>
+                <br>
                 <h2>Contact details</h2>
                 <ul>
                     <li>hello@joesgarage.com</li>
                     <li>Gamla Sörredsvägen 190, 423 56, Torslanda</li>
                     <li>+46700123123</li>
                 </ul>
-                <button type="button" id="touch"><a href="contact.html">Get in touch!</a> </button>
+                <br>
+                <button type="button" href="contact.html">Get in touch!</button>
             </div>
         </div>
     </section>
