add font awesome, telephone icon and tools icon to replace tool image

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="all-day-service" data-text="24 hour service +46700123123">
             24 hour service 
             <br>
-            +46700123123
+            <i class="fa-solid fa-phone-volume"></i> +46 700 123123
         </div>
     </header>
     <section id="details-map">
@@ -58,7 +58,7 @@
     </section>
     <section>
         <div id="tools">
-            <img src="assets/images/kenny-eliason-60krlMMeWxU-unsplash.jpg" alt="Picture with well used tools.">
+            <i class="fa-solid fa-screwdriver-wrench"></i>
         </div>
         <div id="services">
             <h2>Services</h2>
@@ -70,5 +70,8 @@
     <footer>
         <h2>links, social copy etc</h2>
     </footer>
+
+     <!-- font awedome kit-->
+     <script src="https://kit.fontawesome.com/8d9450d66f.js" crossorigin="anonymous"></script>
 </body>
 </html>
