add content and full screen design to Services section

--- a/index.html
+++ b/index.html
@@ -58,10 +58,20 @@
     </section>
     <section>
         <div id="tools">
-            <i class="fa-solid fa-screwdriver-wrench"></i>
+            <i class="fa-solid fa-screwdriver-wrench fa-5x"></i>
+            <br>
+            <h2>Services</h2>
         </div>
         <div id="services">
-            <h2>Services</h2>
+            <h3>Oil Service</h3>
+            <p>We offer fast, affordable, and professional oil change that will keep your motor running coolly, efficiently, and powerfully. We use only factory recommended engine oil of the proper weight and OEM oil filters, so you'll enjoy factory spec excellence with every service.</p>
+            <h4>Starting at $79.95</h4>
+            <h3>Brakes Service</h3>
+            <p>We'll get your car or SUV brake pads and rotors replaced right away for the right price with our brake service specials so you can stop with safety and surety on your next cruise through our lovely neighborhood.</p>
+            <h4>Specials starting at $80</h4>
+            <h3>Wheel Alignment</h3>
+            <p>We'll help you keep your SUV or car handling and driving in perfect alignment with our money-saving wheel alignment.</p>
+            <h4>Starting at $45.50</h4>
         </div>
     </section>
     <section>
