add queries for service section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </li>
             </ul>
         </nav>
-        <div id="all-day-service" data-text="24 hour service +46700123123">
+        <div id="all-day-service">
             24 hour service 
             <br>
             <i class="fa-solid fa-phone-volume"></i> +46 700 123123
