add content to customer section

--- a/index.html
+++ b/index.html
@@ -81,8 +81,27 @@
             <h4>Starting at $45.50</h4>
         </div>
     </section>
-    <section>
-        <h2>Customer satisfaction guaranteed!</h2>
+    <section id="customer">
+        <div id="statement">    
+            <h2>We have a 100% customer satisfaction guarantee!</h2>
+        </div>
+        <div id="customer-quotes">
+            <div>
+                <q>Love the and the mechanics! Fixed my car the same day and to a reasonable price. Will come back for sure.</q>
+                <br>
+                <p>Vendela 5/5</p>
+            </div>
+            <div>
+                <q>Great atmosphere and super-service minded! My car purrs like a cat!</q>
+                <br>
+                <p>Stevie 5/5</p>
+            </div>
+            <div>
+                <q>Took my great granny's old carwreck there with no hopes. In a week's time Joe himself called me and said that the car were ready to hit the road. Magic!</q>
+                <br>
+                <p>Donna 5/5</p>
+            </div>
+        </div>
     </section>
     <footer>
         <h2>links, social copy etc</h2>
