add content to footer

--- a/index.html
+++ b/index.html
@@ -104,7 +104,37 @@
         </div>
     </section>
     <footer>
-        <h2>links, social copy etc</h2>
+        <h1 id="company-name">Joe's Garage</h1>
+        <div id="footer-menu">
+            <nav>
+                <h3>Useful links</h3>
+                <ul id="menu">
+                    <li>
+                        <a href="#" class="active">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">Services</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div id="social">
+            <h3>Follow us</h3>
+            <ul class="social-networks">
+                <li>
+                    <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter-square"></i></i></a>
+                </li>
+                <li>
+                    <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram-square"></i></i></a>
+                </li>
+            </ul>
+        </div>
     </footer>
 
      <!-- font awedome kit-->
