--- a/index.html
+++ b/index.html
@@ -104,37 +104,40 @@
         </div>
     </section>
     <footer>
-        <h1 id="company-name">Joe's Garage</h1>
-        <div id="footer-menu">
-            <nav>
-                <h3>Useful links</h3>
-                <ul id="menu">
+        <div class="footer">
+            <div class="column">
+                <h1 id="company-name">Joe's Garage</h1>
+            </div>
+            <div class="column">
+                <h3>Useful Links</h3>
+                <ul>
                     <li>
-                        <a href="#" class="active">Home</a>
+                        <a href="#">Find Us</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact Us</a>
                     </li>
                     <li>
                         <a href="#">Services</a>
                     </li>
+                </ul>       
+            </div>
+            <div class="column">
+                <h3>Follow Us</h3>
+                <ul id="social">
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter-square"></i></i></a>
+                    </li>
+                    <li>
+                        <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube channel (opens in a new tab)"><i class="fa-brands fa-youtube"></i></i></a>
+                    </li>
+                    <li>
+                        <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram-square"></i></i></a>
                     </li>
                 </ul>
-            </nav>
-        </div>
-        <div id="social">
-            <h3>Follow us</h3>
-            <ul class="social-networks">
-                <li>
-                    <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
-                </li>
-                <li>
-                    <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter-square"></i></i></a>
-                </li>
-                <li>
-                    <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram-square"></i></i></a>
-                </li>
-            </ul>
-        </div>
+            </div>
+          </div>
+        <div id="copy"><i class="fa-solid fa-copyright"></i>2022 Joe's Garage, All Rights Reserved</div>
     </footer>
 
      <!-- font awedome kit-->
