--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="#" class="active">Home</a>
+                    <a href="index.html" class="active">Home</a>
                 </li>
                 <li>
-                    <a href="#">Services</a>
+                    <a href="services.html">Services</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
@@ -45,14 +45,14 @@
         </div>
         <div id="details">
             <div>
-                <h2>Opening Hours</h2>
+                <h3>Opening Hours</h3>
                 <table>
                     <tr><th>Sunday</th><td>Closed</td></tr>
                     <tr><th>Weekdays</th><td>8am - 6pm</td></tr>
                     <tr><th>Saturday</th><td>10am - 3pm</td></tr>
                 </table>
                 <br>
-                <h2>Contact details</h2>
+                <h3>Contact details</h3>
                 <ul>
                     <li>hello@joesgarage.com</li>
                     <li>Gamla Sörredsvägen 190, 423 56, Torslanda</li>
