--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <title>Joe's Garage</title>
 </head>
 <body>
-    <header>
+    <header class="sub-page-header">
         <h1 id="company-name">Joe's Garage</h1>
         <nav>
             <ul id="menu">
@@ -26,11 +26,6 @@
                 </li>
             </ul>
         </nav>
-        <div id="all-day-service">
-            24 hour service 
-            <br>
-            <i class="fa-solid fa-phone-volume"></i> +46 700 123123
-        </div>
     </header>
     <footer>
         <div class="footer">
