add contact details to contact sub page

--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,33 @@
             </ul>
         </nav>
     </header>
+    <section>
+        <div id="details">
+            <div>
+                <h3>Opening Hours</h3>
+                <table>
+                    <tr><th>Sunday</th><td>Closed</td></tr>
+                    <tr><th>Weekdays</th><td>8am - 6pm</td></tr>
+                    <tr><th>Saturday</th><td>10am - 3pm</td></tr>
+                </table>
+                <br>
+                <h3>Contact details</h3>
+                <ul>
+                    <li>hello@joesgarage.com</li>
+                    <li>Gamla Sörredsvägen 190, 423 56, Torslanda</li>
+                    <li>+46700123123</li>
+                </ul>
+                <br>
+                <button type="button" href="contact.html">Get in touch!</button>
+            </div>
+        </div>
+        <div>
+            
+        </div>
+    </section>
+    <section>
+
+    </section>
     <footer>
         <div class="footer">
             <div class="column">
