--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,10 @@
             </ul>
         </nav>
     </header>
-    <section>
+    <section id="details-map">
+        <div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2129.064591855282!2d11.833479016136447!3d57.749327243720494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464f8b9545653703%3A0x8f68447a1f2750be!2sGamla%20S%C3%B6rredsv%C3%A4gen%20190%2C%20423%2056%20Torslanda!5e0!3m2!1ssv!2sse!4v1656955306517!5m2!1ssv!2sse" id="map"></iframe>
+        </div>
         <div id="details">
             <div>
                 <h3>Opening Hours</h3>
@@ -43,12 +46,7 @@
                     <li>Gamla Sörredsvägen 190, 423 56, Torslanda</li>
                     <li>+46700123123</li>
                 </ul>
-                <br>
-                <button type="button" href="contact.html">Get in touch!</button>
             </div>
-        </div>
-        <div>
-            
         </div>
     </section>
     <section>
