add basic contact form without proper design

--- a/services.html
+++ b/services.html
@@ -36,13 +36,13 @@
                 <h3>Useful Links</h3>
                 <ul>
                     <li>
-                        <a href="#">Find Us</a>
+                        <a href="#home-map">Find Us</a>
                     </li>
                     <li>
-                        <a href="#">Contact Us</a>
+                        <a href="contact.html">Contact Us</a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
+                        <a href="services.html">Services</a>
                     </li>
                 </ul>       
             </div>
