--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </p>
     </section>
     <section id="details-map">
-        <div>
+        <div id="home-map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2129.064591855282!2d11.833479016136447!3d57.749327243720494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464f8b9545653703%3A0x8f68447a1f2750be!2sGamla%20S%C3%B6rredsv%C3%A4gen%20190%2C%20423%2056%20Torslanda!5e0!3m2!1ssv!2sse!4v1656955306517!5m2!1ssv!2sse" id="map"></iframe>
         </div>
         <div id="details">
@@ -114,13 +114,13 @@
                 <h3>Useful Links</h3>
                 <ul>
                     <li>
-                        <a href="#">Find Us</a>
+                        <a href="#home-map">Find Us</a>
                     </li>
                     <li>
-                        <a href="#">Contact Us</a>
+                        <a href="contact.html">Contact Us</a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
+                        <a href="services.html">Services</a>
                     </li>
                 </ul>       
             </div>
