add style and center contact form

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
     </section>
     <section>
-        <div id="tools">
+        <div class="tools">
             <i class="fa-solid fa-screwdriver-wrench fa-5x"></i>
             <br>
             <h2>Services</h2>
