add quote and diy section to service page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <i class="fa-solid fa-phone-volume"></i> +46 700 123123
         </div>
     </header>
-    <section id="quote">
+    <section class="quote">
         <p>
             <q>This is your one stop shop to give your car the love it deserves. We have kept them running since 1984</q>
             <br>
@@ -71,7 +71,7 @@
             <br>
             <h2>Services</h2>
         </div>
-        <div id="services">
+        <div class="services">
             <h3>Oil Service</h3>
             <p>We offer fast, affordable, and professional oil change that will keep your motor running coolly, efficiently, and powerfully. We use only factory recommended engine oil of the proper weight and OEM oil filters, so you'll enjoy factory spec excellence with every service.</p>
             <h4>Starting at $79.95</h4>
