--- a/services.html
+++ b/services.html
@@ -27,6 +27,38 @@
             </ul>
         </nav>
     </header>
+    <section class="quote">
+        <p>
+            <q>We can more or less help you with any car related issue.</q>
+            <br>
+            <p id="joe">Joe</p>
+        </p>
+    </section>
+    <section id="services">
+        <p>Our 3 basic packages</p>
+    </section>
+    <section id="diy">
+        <div class="tools">
+            <i class="fa-solid fa-screwdriver-wrench fa-5x"></i>
+            <br>
+            <h2>Buy our DIY-kits!</h2>
+        </div>
+        <div class="services">
+            <p>At Joe's we believe that there is a mechanic in all of us! Give your dream a chance by getting one of our do-it-yourself kits and watch our youtube instructions to get started. We are always here to help you if you have eny questions. We can aslo offer you to rent one of our car lifts to do your job side by side with our experienced mechanics.</p>
+            <br>
+            <p>You pick up our kits at our site and if you wish you can return waste oil and other scrap when you are finnished.</p>
+            <br>
+            <h3>Oil Service Kit</h3>
+                <p>This is a basic kit that will help you get going with your mechanical career.</p>
+                <h4>Kits from $30</h4>
+            <h3>Brakes Service Kit</h3>
+                <p></p>
+                <h4>Kits from $35</h4>
+            <h3>All inclusive Mechanic Experience</h3> 
+                <p></p>
+                <h4>$50 per day</h4>
+        </div>
+    </section>
     <footer>
         <div class="footer">
             <div class="column">
