--- a/services.html
+++ b/services.html
@@ -34,29 +34,36 @@
             <p id="joe">Joe</p>
         </p>
     </section>
-    <section id="services">
-        <p>Our 3 basic packages</p>
-    </section>
     <section id="diy">
         <div class="tools">
             <i class="fa-solid fa-screwdriver-wrench fa-5x"></i>
             <br>
             <h2>Buy our DIY-kits!</h2>
+            <p>Pick up kits and return waste-oil at our site.</p>  
         </div>
         <div class="services">
-            <p>At Joe's we believe that there is a mechanic in all of us! Give your dream a chance by getting one of our do-it-yourself kits and watch our youtube instructions to get started. We are always here to help you if you have eny questions. We can aslo offer you to rent one of our car lifts to do your job side by side with our experienced mechanics.</p>
+            <p>At Joe's we believe that there is a mechanic in all of us! Give your dream a chance by getting one of our do-it-yourself kits and watch our youtube instructions to get started.</p>
             <br>
-            <p>You pick up our kits at our site and if you wish you can return waste oil and other scrap when you are finnished.</p>
-            <br>
-            <h3>Oil Service Kit</h3>
+            <h3>DIY: Oil Service Kit</h3>
                 <p>This is a basic kit that will help you get going with your mechanical career.</p>
                 <h4>Kits from $30</h4>
-            <h3>Brakes Service Kit</h3>
-                <p></p>
+            <h3>DIY: Brakes Service Kit</h3>
+                <p>An intermediate kit for you who are a bit used to use a wrench.</p>
                 <h4>Kits from $35</h4>
-            <h3>All inclusive Mechanic Experience</h3> 
-                <p></p>
+            <h3>DIY: Rent a car lift in our garage</h3> 
+                <p>Do whatever you want with your car side-by-side with Joe's experienced mechanics.</p>
                 <h4>$50 per day</h4>
+        </div>
+    </section>
+    <section id="instructions">
+        <h2>Instruction videos</h2>
+        <div id="oil">
+            <h3>Oil Change</h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/O1hF25Cowv8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay=false; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div id="brakes">
+            <h3>Brakes Service</h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/cKpmBvfVYZg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay=false; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </section>
     <footer>
