add style to iframe

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a href="index.html" class="active">Home</a>
                 </li>
                 <li>
-                    <a href="services.html">Services</a>
+                    <a href="services.html">Joe's DIY</a>
                 </li>
                 <li>
                     <a href="contact.html">Contact</a>
@@ -120,7 +120,7 @@
                         <a href="contact.html">Contact Us</a>
                     </li>
                     <li>
-                        <a href="services.html">Services</a>
+                        <a href="services.html">Joe's DIY</a>
                     </li>
                 </ul>       
             </div>
