--- a/services.html
+++ b/services.html
@@ -19,7 +19,7 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="services.html" class="active">Services</a>
+                    <a href="services.html" class="active">Joe's DIY</a>
                 </li>
                 <li>
                     <a href="contact.html">Contact</a>
@@ -81,7 +81,7 @@
                         <a href="contact.html">Contact Us</a>
                     </li>
                     <li>
-                        <a href="services.html">Services</a>
+                        <a href="services.html">Joe's DIY</a>
                     </li>
                 </ul>       
             </div>
