--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="services.html">Services</a>
+                    <a href="services.html">Joe's DIY</a>
                 </li>
                 <li>
                     <a href="contact.html" class="active">Contact</a>
@@ -97,7 +97,7 @@
                         <a href="contact.html">Contact Us</a>
                     </li>
                     <li>
-                        <a href="services.html">Services</a>
+                        <a href="services.html">Joe's DIY</a>
                     </li>
                 </ul>       
             </div>
