change useful links to anchortags on pages

--- a/contact.html
+++ b/contact.html
@@ -71,6 +71,7 @@
                 <option value="oil">Oil Service</option>
                 <option value="brakes">Brakes Service</option>
                 <option value="wheel">Wheel Alignment</option>
+                <option value="diy">DIY</option>
                 <option value="other">Other</option>
               </select>
           
@@ -94,10 +95,10 @@
                         <a href="#home-map">Find Us</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact Us</a>
+                        <a href="#form">Contact Us</a>
                     </li>
                     <li>
-                        <a href="services.html">Joe's DIY</a>
+                        <a href="services.html#diy">Joe's DIY</a>
                     </li>
                 </ul>       
             </div>
