--- a/services.html
+++ b/services.html
@@ -75,13 +75,13 @@
                 <h3>Useful Links</h3>
                 <ul>
                     <li>
-                        <a href="#home-map">Find Us</a>
+                        <a href="index.html#home-map">Find Us</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact Us</a>
+                        <a href="contact.html#form">Contact Us</a>
                     </li>
                     <li>
-                        <a href="services.html">Joe's DIY</a>
+                        <a href="#diy">Joe's DIY</a>
                     </li>
                 </ul>       
             </div>
