--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
                         <a href="#home-map">Find Us</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact Us</a>
+                        <a href="contact.html#form">Contact Us</a>
                     </li>
                     <li>
-                        <a href="services.html">Joe's DIY</a>
+                        <a href="services.html#diy">Joe's DIY</a>
                     </li>
                 </ul>       
             </div>
