--- a/index.html
+++ b/index.html
@@ -40,29 +40,22 @@
         </p>
     </section>
     <section id="details-map">
-        <div id="home-map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2129.064591855282!2d11.833479016136447!3d57.749327243720494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464f8b9545653703%3A0x8f68447a1f2750be!2sGamla%20S%C3%B6rredsv%C3%A4gen%20190%2C%20423%2056%20Torslanda!5e0!3m2!1ssv!2sse!4v1656955306517!5m2!1ssv!2sse" id="map"></iframe>
+        <div id="about">
+            <i class="fa-solid fa-warehouse fa-5x"></i>
+            <br>
+            <h2>About</h2>
         </div>
-        <div id="details">
-            <div>
-                <h3>Opening Hours</h3>
-                <table>
-                    <tr><th>Sunday</th><td>Closed</td></tr>
-                    <tr><th>Weekdays</th><td>8am - 6pm</td></tr>
-                    <tr><th>Saturday</th><td>10am - 3pm</td></tr>
-                </table>
-                <br>
-                <h3>Contact details</h3>
-                <ul>
-                    <li>hello@joesgarage.com</li>
-                    <li>Gamla Sörredsvägen 190, 423 56, Torslanda</li>
-                    <li>+46700123123</li>
-                </ul>
-                <br>
-                <button type="button">
-                    <a href="contact.html">Get in touch!</a>
-                </button>
-            </div>
+        <div class="services" id="intro">
+            <h3>Welcome to us!</h3>
+            <p>
+            We are a local garage where you either can let us fix your car while you relax with a freshly made cup of coffee. 
+            Or you can buy a DIY kit and even rent a car lift if you want to try your wings as a mechanic. 
+            <br>
+           <h3>History</h3>
+            Joe's were founded back in '84 by Joe himself and has been operating in the same location ever since. At Joe's are every person and every car welcome. Joe's mission was to be a meeting place unlike any other workshop. A place where you can stop by even if your car shines like the sun and purrs like a cat. Joe is always the first and last to leave the garage. In fact his apartment is just upstairs from the garage. We have taken care of thousands of customers since we started and hope to see you next!
+            <br>
+            <h4>Your car, your life, your choice!</h4>
+            </p>
         </div>
     </section>
     <section>
