add fullscreen fixes to homepage. all fullscreens ok

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <p id="joe">Joe</p>
         </p>
     </section>
-    <section id="details-map">
-        <div id="about">
+    <section>
+        <div class="tools" id="about">
             <i class="fa-solid fa-warehouse fa-5x"></i>
             <br>
             <h2>About</h2>
