--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
         <div id="customer-quotes">
             <div>
-                <q>Love the and the mechanics! Fixed my car the same day and to a reasonable price. Will come back for sure.</q>
+                <q>Love the mechanics! Fixed my car the same day and to a reasonable price. Will come back for sure.</q>
                 <br>
                 <p>Vendela 5/5</p>
             </div>
