add media query 400 px and down

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         </div>
     </section>
     <section id="customer">
-        <div id="statement">    
-            <h2>We have a 100% customer satisfaction guarantee!</h2>
+        <div class="quote" id="statement">    
+            <q>We have a 100% customer satisfaction guarantee!</q>
         </div>
         <div id="customer-quotes">
             <div>
@@ -101,7 +101,7 @@
             <div class="column">
                 <h1 id="company-name">Joe's Garage</h1>
             </div>
-            <div class="column">
+            <div class="column" id="column-2">
                 <h3>Useful Links</h3>
                 <ul>
                     <li>
@@ -115,7 +115,7 @@
                     </li>
                 </ul>       
             </div>
-            <div class="column">
+            <div class="column" id="column-3">
                 <h3>Follow Us</h3>
                 <ul id="social">
                     <li>
