--- a/services.html
+++ b/services.html
@@ -71,7 +71,7 @@
             <div class="column">
                 <h1 id="company-name">Joe's Garage</h1>
             </div>
-            <div class="column">
+            <div class="column" id="column-2">
                 <h3>Useful Links</h3>
                 <ul>
                     <li>
@@ -85,7 +85,7 @@
                     </li>
                 </ul>       
             </div>
-            <div class="column">
+            <div class="column" id="column-3">
                 <h3>Follow Us</h3>
                 <ul id="social">
                     <li>
