--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
     </section>
     <section id="details-map">
         <div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2129.064591855282!2d11.833479016136447!3d57.749327243720494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464f8b9545653703%3A0x8f68447a1f2750be!2sGamla%20S%C3%B6rredsv%C3%A4gen%20190%2C%20423%2056%20Torslanda!5e0!3m2!1ssv!2sse!4v1656955306517!5m2!1ssv!2sse" id="map"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d68226.21640811818!2d11.872377506090542!3d57.69829306419767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x464ff346c84efa05%3A0x478b2edcc2183de8!2sgarage%20f%C3%B6rsta%20l%C3%A5nggatan%20g%C3%B6teborg!3m2!1d57.6983124!2d11.9424168!5e0!3m2!1ssv!2sse!4v1658692080687!5m2!1ssv!2sse" id="map"></iframe>
         </div>
         <div id="details">
             <div>
@@ -50,7 +50,7 @@
                 <h3>Contact details</h3>
                 <ul>
                     <li>hello@joesgarage.com</li>
-                    <li>Gamla Sörredsvägen 190, 423 56, Torslanda</li>
+                    <li>Andra Långgatan 44, 413 27 Göteborg</li>
                     <li>+46700123123</li>
                 </ul>
             </div>
