add comments to all html files

--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,11 @@
     <title>Joe's Garage</title>
 </head>
 <body>
+    <!--Header-->
     <header class="sub-page-header">
+        <!--Logo-->
         <h1 id="company-name">Joe's Garage</h1>
+        <!--Navigation-->
         <nav>
             <ul id="menu">
                 <li>
@@ -27,6 +30,8 @@
             </ul>
         </nav>
     </header>
+
+    <!--Quote section-->
     <section class="quote">
         <p>
             <q>We'll always get back to you within one working day!</q>
@@ -34,10 +39,14 @@
             <p id="joe">Joe</p>
         </p>
     </section>
+
+    <!--Google map and contact details-->
     <section id="details-map">
+        <!--Map-->
         <div>
             <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d68226.21640811818!2d11.872377506090542!3d57.69829306419767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x464ff346c84efa05%3A0x478b2edcc2183de8!2sgarage%20f%C3%B6rsta%20l%C3%A5nggatan%20g%C3%B6teborg!3m2!1d57.6983124!2d11.9424168!5e0!3m2!1ssv!2sse!4v1658692080687!5m2!1ssv!2sse" id="map"></iframe>
         </div>
+        <!--Contact details-->
         <div id="details">
             <div>
                 <h3>Opening Hours</h3>
@@ -56,6 +65,8 @@
             </div>
         </div>
     </section>
+
+    <!--Contact form-->
     <section id="form">
         <div class="container">
             <form action="confirmation.html">
@@ -83,11 +94,15 @@
             </form>
           </div>
     </section>
+    
+    <!--Footer-->
     <footer>
         <div class="footer">
+            <!--Logo-->
             <div class="column">
                 <h1 id="company-name">Joe's Garage</h1>
             </div>
+            <!--Useful links-->
             <div class="column" id="column-2">
                 <h3>Useful Links</h3>
                 <ul>
@@ -102,6 +117,7 @@
                     </li>
                 </ul>       
             </div>
+            <!--Social links-->
             <div class="column" id="column-3">
                 <h3>Follow Us</h3>
                 <ul id="social">
@@ -117,6 +133,7 @@
                 </ul>
             </div>
           </div>
+        <!--Copyright-->
         <div id="copy"><i class="fa-solid fa-copyright"></i>2022 Joe's Garage, All Rights Reserved</div>
     </footer>
 
