--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     <title>Joe's Garage</title>
 </head>
 <body>
+<!--Header-->
     <header>
+        <!--Logo-->
         <h1 id="company-name">Joe's Garage</h1>
         <nav>
+            <!--Navigation-->
             <ul id="menu">
                 <li>
                     <a href="index.html" class="active">Home</a>
@@ -26,17 +29,22 @@
                 </li>
             </ul>
         </nav>
+        <!--24 hour service number-->
         <div id="all-day-service">
             24 hour service 
             <br>
             <i class="fa-solid fa-phone-volume"></i> +46 700 123123
         </div>
     </header>
+    
+    <!--Quote section-->
     <section class="quote">
-            <q>This is your one stop shop to give your car the love it deserves. We have kept them running since 1984</q>
-            <br>
-            <p id="joe">Joe</p>
+        <q>This is your one stop shop to give your car the love it deserves. We have kept them running since 1984</q>
+        <br>
+        <p id="joe">Joe</p>
     </section>
+
+    <!--Welcome and about-section-->
     <section>
         <div class="tools" id="about">
             <i class="fa-solid fa-warehouse fa-5x"></i>
@@ -56,6 +64,8 @@
             </p>
         </div>
     </section>
+
+    <!--Classic service section-->
     <section>
         <div class="tools">
             <i class="fa-solid fa-screwdriver-wrench fa-5x"></i>
@@ -74,6 +84,8 @@
             <h4>Starting at $45.50</h4>
         </div>
     </section>
+
+    <!--Statement and Customer testimonials-->
     <section id="customer">
         <div class="quote" id="statement">    
             <q>We have a 100% customer satisfaction guarantee!</q>
@@ -96,11 +108,15 @@
             </div>
         </div>
     </section>
+
+    <!--footer-->
     <footer>
         <div class="footer">
+            <!--Logo-->
             <div class="column">
                 <h1 id="company-name">Joe's Garage</h1>
             </div>
+            <!--Useful links-->
             <div class="column" id="column-2">
                 <h3>Useful Links</h3>
                 <ul>
@@ -115,6 +131,7 @@
                     </li>
                 </ul>       
             </div>
+            <!--Social links-->
             <div class="column" id="column-3">
                 <h3>Follow Us</h3>
                 <ul id="social">
@@ -130,6 +147,7 @@
                 </ul>
             </div>
           </div>
+        <!--Copyright-->
         <div id="copy"><i class="fa-solid fa-copyright"></i>2022 Joe's Garage, All Rights Reserved</div>
     </footer>
 
