--- a/services.html
+++ b/services.html
@@ -11,8 +11,11 @@
     <title>Joe's Garage</title>
 </head>
 <body>
+    <!--Header-->
     <header class="sub-page-header">
+        <!--Logo-->
         <h1 id="company-name">Joe's Garage</h1>
+        <!--Navigation-->
         <nav>
             <ul id="menu">
                 <li>
@@ -27,6 +30,7 @@
             </ul>
         </nav>
     </header>
+    <!--Quote section-->
     <section class="quote">
         <p>
             <q>We can more or less help you with any car related issue.</q>
@@ -34,6 +38,8 @@
             <p id="joe">Joe</p>
         </p>
     </section>
+
+    <!--Joe's DIY section-->
     <section id="diy">
         <div class="tools">
             <i class="fa-solid fa-screwdriver-wrench fa-5x"></i>
@@ -55,6 +61,8 @@
                 <h4>$50 per day</h4>
         </div>
     </section>
+
+    <!--Instruction videos-->
     <section id="instructions">
         <h2>Instruction videos</h2>
         <div id="oil">
@@ -66,11 +74,15 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/cKpmBvfVYZg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay=false; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </section>
+    
+    <!--Footer-->
     <footer>
         <div class="footer">
+            <!--Logo-->
             <div class="column">
                 <h1 id="company-name">Joe's Garage</h1>
             </div>
+            <!--Useful links-->
             <div class="column" id="column-2">
                 <h3>Useful Links</h3>
                 <ul>
@@ -85,6 +97,7 @@
                     </li>
                 </ul>       
             </div>
+            <!--Social links-->
             <div class="column" id="column-3">
                 <h3>Follow Us</h3>
                 <ul id="social">
@@ -100,6 +113,7 @@
                 </ul>
             </div>
           </div>
+        <!--Copyright--> 
         <div id="copy"><i class="fa-solid fa-copyright"></i>2022 Joe's Garage, All Rights Reserved</div>
     </footer>
 
