--- a/confirmation.html
+++ b/confirmation.html
@@ -11,8 +11,11 @@
     <title>Joe's Garage</title>
 </head>
 <body>
+    <!--Header-->
     <header class="sub-page-header">
+        <!--Logo-->
         <h1 id="company-name">Joe's Garage</h1>
+        <!--Navigation-->
         <nav>
             <ul id="menu">
                 <li>
@@ -27,17 +30,23 @@
             </ul>
         </nav>
     </header>
+    
+    <!--Form confirmation message-->
     <section class="quote" id="confirm">
         <h3>Thanks for contacting us!</h3>
         <h4>We'll get back to you within one working day.</h4> 
         <br>
         <h4>/Team Joe</h4>
     </section>
+
+    <!--Footer-->
     <footer>
         <div class="footer">
+            <!--Logo-->
             <div class="column">
                 <h1 id="company-name">Joe's Garage</h1>
             </div>
+            <!--Useful links-->
             <div class="column" id="column-2">
                 <h3>Useful Links</h3>
                 <ul>
@@ -52,6 +61,7 @@
                     </li>
                 </ul>       
             </div>
+            <!--Social links-->
             <div class="column" id="column-3">
                 <h3>Follow Us</h3>
                 <ul id="social">
@@ -66,7 +76,8 @@
                     </li>
                 </ul>
             </div>
-          </div>
+        </div>
+        <!--Copyright-->
         <div id="copy"><i class="fa-solid fa-copyright"></i>2022 Joe's Garage, All Rights Reserved</div>
     </footer>
 
