--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         <h1 id="company-name">Joe's Garage</h1>
         <!--Navigation-->
         <nav>
-            <ul id="menu">
+            <ul id="menu" aria-label="main">
                 <li>
                     <a href="index.html">Home</a>
                 </li>
@@ -107,13 +107,13 @@
                 <h3>Useful Links</h3>
                 <ul>
                     <li>
-                        <a href="#home-map">Find Us</a>
+                        <a href="#home-map" aria-label="Link to a map to our garage (opens in same tab)">Find Us</a>
                     </li>
                     <li>
-                        <a href="#form">Contact Us</a>
+                        <a href="#form" aria-label="Link to our contact form (opens in same tab)">Contact Us</a>
                     </li>
                     <li>
-                        <a href="services.html#diy">Joe's DIY</a>
+                        <a href="services.html#diy" aria-label="Link to our DIY kits (opens in same tab)">Joe's DIY</a>
                     </li>
                 </ul>       
             </div>
