--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1 id="company-name">Joe's Garage</h1>
         <nav>
             <!--Navigation-->
-            <ul id="menu">
+            <ul id="menu" aria-label="main">
                 <li>
                     <a href="index.html" class="active">Home</a>
                 </li>
@@ -121,13 +121,13 @@
                 <h3>Useful Links</h3>
                 <ul>
                     <li>
-                        <a href="#home-map">Find Us</a>
+                        <a href="contact.html#home-map" aria-label="Link to a map to our garage (opens in same tab)">Find Us</a>
                     </li>
                     <li>
-                        <a href="contact.html#form">Contact Us</a>
+                        <a href="contact.html#form" aria-label="Link to our contact form (opens in same tab)">Contact Us</a>
                     </li>
                     <li>
-                        <a href="services.html#diy">Joe's DIY</a>
+                        <a href="services.html#diy" aria-label="Link to our DIY kits (opens in same tab)">Joe's DIY</a>
                     </li>
                 </ul>       
             </div>
