--- a/confirmation.html
+++ b/confirmation.html
@@ -14,10 +14,10 @@
     <!--Header-->
     <header class="sub-page-header">
         <!--Logo-->
-        <h1 id="company-name">Joe's Garage</h1>
+        <h1 class="company-name">Joe's Garage</h1>
         <!--Navigation-->
         <nav>
-            <ul id="menu">
+            <ul id="menu" aria-label="main">
                 <li>
                     <a href="index.html">Home</a>
                 </li>
@@ -44,20 +44,20 @@
         <div class="footer">
             <!--Logo-->
             <div class="column">
-                <h1 id="company-name">Joe's Garage</h1>
+                <h1 class="company-name">Joe's Garage</h1>
             </div>
             <!--Useful links-->
             <div class="column" id="column-2">
                 <h3>Useful Links</h3>
                 <ul>
                     <li>
-                        <a href="#home-map">Find Us</a>
+                        <a href="contact.html#home-map" aria-label="Link to a map to our garage (opens in same tab)">Find Us</a>
                     </li>
                     <li>
-                        <a href="#form">Contact Us</a>
+                        <a href="contact.html#form" aria-label="Link to our contact form (opens in same tab)">Contact Us</a>
                     </li>
                     <li>
-                        <a href="services.html#diy">Joe's DIY</a>
+                        <a href="services.html#diy" aria-label="Link to our DIY kits (opens in same tab)">Joe's DIY</a>
                     </li>
                 </ul>       
             </div>
@@ -66,13 +66,13 @@
                 <h3>Follow Us</h3>
                 <ul id="social">
                     <li>
-                        <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter-square"></i></i></a>
+                        <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter-square"></i></a>
                     </li>
                     <li>
-                        <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube channel (opens in a new tab)"><i class="fa-brands fa-youtube"></i></i></a>
+                        <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube channel (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
                     </li>
                     <li>
-                        <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram-square"></i></i></a>
+                        <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram-square"></i></a>
                     </li>
                 </ul>
             </div>
