--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!--Header-->
     <header>
         <!--Logo-->
-        <h1 id="company-name">Joe's Garage</h1>
+        <h1 class="company-name">Joe's Garage</h1>
         <nav>
             <!--Navigation-->
             <ul id="menu" aria-label="main">
@@ -38,11 +38,11 @@
     </header>
     
     <!--Quote section-->
-    <section class="quote">
+    <div class="quote">
         <q>This is your one stop shop to give your car the love it deserves. We have kept them running since 1984</q>
         <br>
         <p id="joe">Joe</p>
-    </section>
+    </div>
 
     <!--Welcome and about-section-->
     <section>
@@ -56,12 +56,12 @@
             <p>
             We are a local garage where you either can let us fix your car while you relax with a freshly made cup of coffee. 
             Or you can buy a DIY kit and even rent a car lift if you want to try your wings as a mechanic. 
+            </p>
             <br>
            <h3>History</h3>
             Joe's were founded back in '84 by Joe himself and has been operating in the same location ever since. At Joe's are every person and every car welcome. Joe's mission was to be a meeting place unlike any other workshop. A place where you can stop by even if your car shines like the sun and purrs like a cat. Joe is always the first and last to leave the garage. In fact his apartment is just upstairs from the garage. We have taken care of thousands of customers since we started and hope to see you next!
             <br>
             <h4>Your car, your life, your choice!</h4>
-            </p>
         </div>
     </section>
 
@@ -86,7 +86,7 @@
     </section>
 
     <!--Statement and Customer testimonials-->
-    <section id="customer">
+    <div id="customer">
         <div class="quote" id="statement">    
             <q>We have a 100% customer satisfaction guarantee!</q>
         </div>
@@ -107,14 +107,14 @@
                 <p>Donna 5/5</p>
             </div>
         </div>
-    </section>
+    </div>
 
     <!--footer-->
     <footer>
         <div class="footer">
             <!--Logo-->
             <div class="column">
-                <h1 id="company-name">Joe's Garage</h1>
+                <h1 class="company-name">Joe's Garage</h1>
             </div>
             <!--Useful links-->
             <div class="column" id="column-2">
@@ -136,13 +136,13 @@
                 <h3>Follow Us</h3>
                 <ul id="social">
                     <li>
-                        <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter-square"></i></i></a>
+                        <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter-square"></i></a>
                     </li>
                     <li>
-                        <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube channel (opens in a new tab)"><i class="fa-brands fa-youtube"></i></i></a>
+                        <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube channel (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
                     </li>
                     <li>
-                        <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram-square"></i></i></a>
+                        <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram-square"></i></a>
                     </li>
                 </ul>
             </div>
