--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
     <!--Header-->
     <header class="sub-page-header">
         <!--Logo-->
-        <h1 id="company-name">Joe's Garage</h1>
+        <h1 class="company-name">Joe's Garage</h1>
         <!--Navigation-->
         <nav>
             <ul id="menu" aria-label="main">
@@ -31,13 +31,11 @@
         </nav>
     </header>
     <!--Quote section-->
-    <section class="quote">
-        <p>
-            <q>We can more or less help you with any car related issue.</q>
-            <br>
-            <p id="joe">Joe</p>
-        </p>
-    </section>
+    <div class="quote">
+        <q>We can more or less help you with any car related issue.</q>
+        <br>
+        <p id="joe">Joe</p>
+    </div>
 
     <!--Joe's DIY section-->
     <section id="diy">
@@ -67,11 +65,11 @@
         <h2>Instruction videos</h2>
         <div id="oil">
             <h3>Oil Change</h3>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/O1hF25Cowv8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay=false; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/O1hF25Cowv8" title="YouTube video player" allow="accelerometer; autoplay=false; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div id="brakes">
             <h3>Brakes Service</h3>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/cKpmBvfVYZg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay=false; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/cKpmBvfVYZg" title="YouTube video player" allow="accelerometer; autoplay=false; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </section>
     
@@ -80,7 +78,7 @@
         <div class="footer">
             <!--Logo-->
             <div class="column">
-                <h1 id="company-name">Joe's Garage</h1>
+                <h1 class="company-name">Joe's Garage</h1>
             </div>
             <!--Useful links-->
             <div class="column" id="column-2">
@@ -102,13 +100,13 @@
                 <h3>Follow Us</h3>
                 <ul id="social">
                     <li>
-                        <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter-square"></i></i></a>
+                        <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter-square"></i></a>
                     </li>
                     <li>
-                        <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube channel (opens in a new tab)"><i class="fa-brands fa-youtube"></i></i></a>
+                        <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube channel (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
                     </li>
                     <li>
-                        <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram-square"></i></i></a>
+                        <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram-square"></i></a>
                     </li>
                 </ul>
             </div>
