change width on contact form on large and medium screens to 50%

--- a/contact.html
+++ b/contact.html
@@ -103,10 +103,10 @@
                 <h3>Useful Links</h3>
                 <ul>
                     <li>
-                        <a href="#home-map" aria-label="Link to a map to our garage (opens in same tab)">Find Us</a>
+                        <a href="contact.html#home-map" aria-label="Link to a map to our garage (opens in same tab)">Find Us</a>
                     </li>
                     <li>
-                        <a href="#form" aria-label="Link to our contact form (opens in same tab)">Contact Us</a>
+                        <a href="contact.html#form" aria-label="Link to our contact form (opens in same tab)">Contact Us</a>
                     </li>
                     <li>
                         <a href="services.html#diy" aria-label="Link to our DIY kits (opens in same tab)">Joe's DIY</a>
