set contactfrom width to 90% on screens from 950px and own

--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
     </section>
 
     <!--Contact form-->
-    <div class="container" id="form">
+    <div class="container">
         <form action="confirmation.html">
           
             <label for="fname">Name</label>
