repairs bug in useful links in footer

--- a/confirmation.html
+++ b/confirmation.html
@@ -51,7 +51,7 @@
                 <h3>Useful Links</h3>
                 <ul>
                     <li>
-                        <a href="contact.html#home-map" aria-label="Link to a map to our garage (opens in same tab)">Find Us</a>
+                        <a href="contact.html#details-map" aria-label="Link to a map to our garage (opens in same tab)">Find Us</a>
                     </li>
                     <li>
                         <a href="contact.html#form" aria-label="Link to our contact form (opens in same tab)">Contact Us</a>
